--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="amfm_button_text">AM/FM</string>
+    <string name="toggle_button_default">toggle_button</string>
+    <string name="power_button_on">ON</string>
+    <string name="power_button_off">OFF</string>
+    <string name="radio_display_text">Default_Radio_Display_Text</string>
+    <string name="preset_button_1">1</string>
+    <string name="preset_button_2">2</string>
+    <string name="preset_button_3">3</string>
+    <string name="preset_button_4">4</string>
+    <string name="volume_up">+</string>
+    <string name="volume_down">-</string>
 </resources>
